<package>
  <name>ipa_seminar_application_bringup</name>
  <version>0.1.0</version>
  <description>ipa_seminar_application_bringup</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/ipa_seminar_application_bringup</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roslaunch</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cob_controller_configuration_gazebo</run_depend>
  <run_depend>joint_trajectory_action</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>ur_driver</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ipa_seminar_application_pick_and_place</run_depend>
 
  <export>

  </export>
</package>
